--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,11 @@ header{
     margin: 30px;
 }
 
+.logo img{
+    width: 265px;
+    height: 115px;    
+}
+
 .login{
     height: 60px;
     width: 220px;
