--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: linear-gradient(45deg, #32E383, #263238);
+}
+
 header{
     width: 100%;
     height: 115px;
@@ -17,10 +21,6 @@ header{
     width: 220px;
     border-radius: 30px;
     background-color: #4BB257;
-}
-
-body{
-    background: linear-gradient(45deg, #32E383, #263238)
 }
 
 .container{
