--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1,3 +1,3 @@
 body{
-    background-color: linear-gradient(45deg, #32E383, #263238);
+    background: linear-gradient(45deg, #32E383, #263238);
 }
