--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 .body{
+    display: block;
     background-color: linear-gradient(45deg, #32E383, #263238);
 }
 
@@ -11,7 +12,7 @@ header{
     margin: 30px;
 }
 
-.logo img{
+.logo{
     width: 265px;
     height: 115px;    
 }
