--- a/styles/styles2.CSS
+++ b/styles/styles2.CSS
@@ -37,3 +37,13 @@ header{
     display: flex;
     justify-content: space-between;
 }
+
+.menu{
+    display: flex;
+    justify-content: space-between;
+}
+
+.box5{
+    display: flex;
+    flex-direction: column;
+}
