--- a/styles/styles2.CSS
+++ b/styles/styles2.CSS
@@ -7,27 +7,33 @@ header{
     width: 100%;
     height: 115px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:space-around;
+    align-items:center;
     margin: 30px;
 }
 
-.logo{
+.logo img{
     width: 265px;
     height: 115px;
 }
 
-.restart{
+.restart button{
     height: 60px;
     width: 220px;
     border-radius: 30px;
     background-color: #4BB257;
 }
 
+.perfil small img{
+    width: 80px;
+    height: 81px;
+    border-radius: 38.5px;
+    stroke: #4BB257, 6px;   
+}
+
 .center{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:space-around;
     flex-wrap: wrap;
     align-content: space-evenly;
     background-color: #263238;
