--- a/styles/styles2.CSS
+++ b/styles/styles2.CSS
@@ -24,7 +24,7 @@ header{
     background-color: #4BB257;
 }
 
-.perfil small img{
+.perfil small image{
     width: 80px;
     height: 81px;
     border-radius: 38.5px;
