modified:   index.html 	modified:   styles/styles.css 	modified:   index.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,6 +108,7 @@ header{
     flex-direction: column;
     justify-content: center;
     height:218px;
+    border-radius: 30px;
     width:580px;
     background-color: white;
        
