--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -1,14 +1,14 @@
-.body{
+body{
     display: block;
     background: linear-gradient(45deg, #32E383, #263238);
 }
 
-.header{
+header{
     width: 100%;
     height: 115px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content:space-between;
+    align-items:center;
     margin: 30px;
 }
 
@@ -24,10 +24,11 @@
     background-color: #4BB257;
 }
 
-.perfil small{
+.perfil small img{
     width: 80px;
     height: 81px;
     border-radius: 38.5px;
+    border-color: #4BB257;
 }
 
 .menu{
