removido 4 paginas de html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,9 +9,12 @@ header{
     margin: 30px;
 }
 
-.logo img{
+.logo img {
     width: 265px;
-    height: 115px;    
+    height: 115px;
+    top: 5px;
+    left: 60px;
+    flex-shrink: 0;
 }
 
 .login button{
