--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,16 @@
+body {
+    background: linear-gradient(252deg, rgba(50, 227, 131, 0.38) 0%, rgba(50, 227, 131, 0.00) 100%), #263238;
+    backdrop-filter: blur(25px);
+    width: 1920px;
+    height: 1080px;
+}
+
 header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-left: 40px;
+    margin-top: 5px;
 }
 
 .logo img {
@@ -12,12 +22,18 @@ header{
 }
 
 .login button{
-    color:white;
-    font-weight: 900;
-    font-size: xx-large;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
     height: 60px;
     width: 220px;
+    left: 60px;
+    flex-shrink: 0;
     border-radius: 30px;
+    color:white;
     background-color: #4BB257;
 }
 
@@ -104,14 +120,34 @@ header{
     background-color: #4BB257;  
 }
 
-.aviso{
+.aviso {
     display: flex;
+    width:580px;
+    height:220px;
     flex-direction: column;
     justify-content: center;
-    font-weight: 900;
-    height:218px;
+    flex-shrink: 0;
+    text-align: center;
     border-radius: 30px;
-    width:580px;
     background-color: white;
-       
+}
+
+.aviso h3{
+    color: #4BB257;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.aviso p{
+    color: #000;
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding: 0 30px;
 }
