--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ header{
 .container{
     display: flex;
     justify-content: space-between;
-    flex-direction:row;
+    flex-direction: row;
     align-content: space-evenly;
     text-align: center;
     border-radius: 30px;
@@ -67,6 +67,18 @@ header{
     Left: 40px;
     flex-shrink: 0;
     border-radius: 30px;
+}
+
+.personagens-txt, .citacoes-txt, .criaturas-txt, .episodios-txt{
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    width: 135px;
+    height: 30px;
+    top: 142px;
+    left: 53px;
 }
 
 .episodios img{
@@ -97,13 +109,20 @@ header{
 }
 
 .vertudo button{
-    color:white;
-    font-weight: 900;
-    font-size: large;
     width: 139px;
     height: 34px;
+    top: 414px;
+    left: 40px;
+    font-weight: 900;
+    font-size: large;
     border-radius: 30px;
-    background-color: #4BB257;
+    background: #4BB257;
+    color:white;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 .portal{
@@ -114,11 +133,17 @@ header{
 
 .jogar{
     color:white;
-    font-weight: 900;
-    font-size: xxx-large;
-    height: 90px;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 64px;
+    font-weight: 700;
+    font-style: normal;
+    line-height: normal;
     width: 400px;
+    height: 90px;
+    margin: 44px;
     border-radius: 30px;
+    flex-shrink: 0;
     background-color: #4BB257;  
 }
 
