--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -1,6 +1,6 @@
 body{
     display: block;
-    background: linear-gradient(45deg, #32E383, #263238);
+    background: linear-gradient(252deg, rgba(50, 227, 131, 0.38) 0%, rgba(50, 227, 131, 0.00) 100%), #263238;
 }
 
 header{
@@ -48,8 +48,9 @@ header{
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    background-color: #263238;
     border-radius: 30px;
+    background: #263238;
+    box-shadow: -1px 5px 10px 0px #000;
     padding: 30px;
 }
 
@@ -60,6 +61,11 @@ header{
 .progress img{
     height: 295px;
     width: 310px;   
+}
+
+.progress-exp{
+    width: 75%;
+    background: #d81515;
 }
 
 .conquistas{
