alterado as cores

--- a/styles/cadastro.css
+++ b/styles/cadastro.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-color: #FF3131;
+    --primary-color: #4BB257;
     --secundary-color: #FFF;
     --text-color-dark: #000;
     --text-color-light: #fff;
