--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,193 +1,214 @@
-body {
-    background: linear-gradient(252deg, rgba(50, 227, 131, 0.38) 0%, rgba(50, 227, 131, 0.00) 100%), #263238;
-    backdrop-filter: blur(25px);
-    width: 1920px;
-    height: 1080px;
+* {
+    box-sizing: border-box;
 }
 
-header{
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    width: 100%;
+    height: 115px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 40px;
-    margin-top: 5px;
+    /* margin: 30px; */
 }
 
 .logo img {
     width: 265px;
-    height: 115px;
-    top: 5px;
-    left: 60px;
-    flex-shrink: 0;
+    height: 115px;   
+    margin-left: 15px; 
 }
 
-.login button{
-    text-align: center;
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    height: 60px;
-    width: 220px;
-    left: 60px;
-    margin-right: 56px;
-    flex-shrink: 0;
-    border-radius: 30px;
+.login button {
     color:white;
-    background-color: #4BB257;
-}
-
-.login:hover{
-    color:#4BB257;
     font-weight: 900;
-    font-size: xx-large;
-    height: 60px;
-    width: 220px;
+    /* font-size: xx-large; */
+    font-size: 27px;
+    /* height: 60px; */
+    /* width: 220px; */
+    width: 150px;
+    padding: 5px 0;
     border-radius: 30px;
-    background-color: white;
+    background-color: #4BB257;
+    margin-right: 15px;
+    cursor: pointer;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    align-items: center;
+    /*valor padrão do flex-direction é row*/
+    /* flex-direction: row; */
     align-content: space-evenly;
-    text-align: center;
-    border-radius: 30px;
+    /* border-radius: 30px; */
+    padding: 0 18px;
 }
 
-.destaques{
-    width: 580px;
+/* .opcoes{
     height: 460px;
-    flex-shrink: 0;
-    display:flex;
+    width: 580px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    gap: 20px;
+    border-radius: 30px;
+    background-color: white;
+} */
+
+.destaques {
+    /*flex-basis controla a largura desta div*/
+    flex-basis: 33%;
+
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    border-radius: 30px;
-    backdrop-filter: blur(20px);
-    background: white;
-    margin: 0 auto;
-    padding: 15px;
+    /* justify-content: space-between; */
+    /* width: 580px; */
+    /* height: 460px; */
+    border-radius: 20px;
+    background-color: white;
+    padding: 15px 0 10px 0;
 }
 
-.personagens img{
+.destaques .destaques-item {
+    width: 45%;
+    position: relative;
+}
+
+/* .personagens-img img {
     width: 240px;
     height: 172px;
-    Top: 32px;
-    Left: 40px;
-    flex-shrink: 0;
     border-radius: 30px;
-}
+} */
 
-.personagens-txt, .citacoes-txt, .criaturas-txt, .episodios-txt{
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 30px;
-    width: 135px;
-    height: 30px;
-    top: 142px;
-    left: 53px;
-}
+/* .episodios-img img {
+    width: 240px;
+    height: 172px; 
+    border-radius: 30px;
+} */
 
-.episodios img{
+/* .citacoes-img img {
     width: 240px;
     height: 172px;
-    Top: 32px;
-    Left: 300px;
-    flex-shrink: 0;
-    border-radius: 30px;
-}
+    border-radius: 30px;    
+} */
 
-.citacoes img{
+/* .criaturas-img img {
     width: 240px;
     height: 172px;
-    Top: 230px;
-    Left: 40px;
-    flex-shrink: 0;
-    border-radius: 30px;
+    border-radius: 30px;   
+} */
+
+.destaques .destaques-item img {
+    width: 100%;
+    /*A propriedade "max-width" é para garantir que a imagem não seja maior que um tamanho específico*/
+    max-width: 250px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
-.criaturas img{
-    width: 240px;
-    height: 172px;
-    Top: 230px;
-    Left: 300px;
-    flex-shrink: 0;
-    border-radius: 30px;
+.destaques-item h4 {
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, .5);
+    padding: 5px 7px;
+    border-radius: 5px;
+    font-size: 12px;
+    color: #ffffff;
 }
 
-.vertudo button{
-    width: 139px;
-    height: 34px;
-    top: 414px;
-    left: 40px;
-    font-weight: 900;
-    font-size: large;
-    border-radius: 30px;
-    background: #4BB257;
+.vertudo button {
     color:white;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
+    /* font-size: large; */
+    font-size: 16px;
+    /* width: 139px; */
+    height: 34px;
+    padding: 10px 15px;
+    border-radius: 30px;
+    background-color: #4BB257;
+    margin-top: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.portal img{
-    border-radius: 342px;
-    flex-shrink: 0;
+.portal {
+    /* width: 599px; */
+    flex-basis: 28%;
+    /* height: 595px; */
+    /* border-radius: 496px; */
     border-radius: 50%;
 }
 
-.jogar{
+.portal img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.jogar {
     color:white;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 64px;
-    font-weight: 700;
-    font-style: normal;
-    line-height: normal;
-    width: 400px;
-    height: 90px;
-    margin: 44px;
+    font-weight: 900;
+    /* font-size: xxx-large; */
+    font-size: 27px;
+    /* height: 90px; */
+    /* width: 400px; */
+    width: 180px;
+    display: block;
+    margin: 20px auto 0 auto;
+    padding: 7px 0;
     border-radius: 30px;
-    flex-shrink: 0;
     background-color: #4BB257;  
+    cursor: pointer;
 }
 
 .aviso {
     display: flex;
-    width:580px;
-    height:220px;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 0;
-    text-align: center;
-    border-radius: 30px;
-    background-color: white;
-    margin-right: 56px;
+    font-weight: 900;
+    /* height:218px; */
+    padding: 10px;
+    border-radius: 20px;
+    /* width:580px; */
+    flex-basis: 28%;
+    background-color: white;       
 }
 
-.aviso h3{
-    color: #4BB257;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+.aviso h3 {
+    margin-bottom: 8px;
 }
 
-.aviso p{
-    color: #000;
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    padding: 0 30px;
+.aviso p:nth-child(2) {
+    margin-bottom: 5px;
 }
 
+footer {
+    /* text-align: center; */
+    color: #f7f7f7;
+    margin-top: 50px;
+    font-size: 16px;
+    position: relative;
+}
+
+footer span {
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-30%);
+}
+
+footer span i {
+    margin-right: 3px;
+}
