--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -40,18 +40,34 @@ header{
 }
 
 .container-perfil{
-    height: 861px;
     display: flex;
-    justify-content: space-between;
+    gap: 1rem;
 }
 
-.perfil{
+.box-perfil{
     display: flex;
-    justify-content: flex-end;
     width: 1374px;
     height: 861px;
+    flex-shrink: 0;
     border-radius: 30px;
-    padding: 0;
     background: #263238;
     box-shadow: -1px 5px 10px 0px #000;
+    margin: 30px 4% 4%;
+}
+
+.perfil {
+    background: #ffff;
+    display: flex;
+    width: 260px;
+    height: 260px;
+    border-radius: 20px;
+    margin: 40px;
+}
+.nome {
+    color:#000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    margin: 0 120% 210px;
 }
