--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+body{
+    background: linear-gradient(252deg, rgba(50, 227, 131, 0.38) 0%, rgba(50, 227, 131, 0.00) 100%), #263238;
+    backdrop-filter: blur(25px);
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -13,7 +18,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* margin: 30px; */
 }
 
 .logo img {
@@ -25,10 +29,7 @@ header {
 .login button {
     color:white;
     font-weight: 900;
-    /* font-size: xx-large; */
     font-size: 27px;
-    /* height: 60px; */
-    /* width: 220px; */
     width: 150px;
     padding: 5px 0;
     border-radius: 30px;
@@ -41,36 +42,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /*valor padrão do flex-direction é row*/
-    /* flex-direction: row; */
     align-content: space-evenly;
-    /* border-radius: 30px; */
     padding: 0 18px;
 }
 
-/* .opcoes{
-    height: 460px;
-    width: 580px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    align-content: space-evenly;
-    gap: 20px;
-    border-radius: 30px;
-    background-color: white;
-} */
-
 .destaques {
-    /*flex-basis controla a largura desta div*/
     flex-basis: 33%;
-
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    /* justify-content: space-between; */
-    /* width: 580px; */
-    /* height: 460px; */
     border-radius: 20px;
     background-color: white;
     padding: 15px 0 10px 0;
@@ -81,33 +61,8 @@ header {
     position: relative;
 }
 
-/* .personagens-img img {
-    width: 240px;
-    height: 172px;
-    border-radius: 30px;
-} */
-
-/* .episodios-img img {
-    width: 240px;
-    height: 172px; 
-    border-radius: 30px;
-} */
-
-/* .citacoes-img img {
-    width: 240px;
-    height: 172px;
-    border-radius: 30px;    
-} */
-
-/* .criaturas-img img {
-    width: 240px;
-    height: 172px;
-    border-radius: 30px;   
-} */
-
 .destaques .destaques-item img {
     width: 100%;
-    /*A propriedade "max-width" é para garantir que a imagem não seja maior que um tamanho específico*/
     max-width: 250px;
     object-fit: cover;
     border-radius: 10px;
@@ -129,9 +84,7 @@ header {
 .vertudo button {
     color:white;
     font-weight: 700;
-    /* font-size: large; */
     font-size: 16px;
-    /* width: 139px; */
     height: 34px;
     padding: 10px 15px;
     border-radius: 30px;
@@ -144,10 +97,7 @@ header {
 }
 
 .portal {
-    /* width: 599px; */
     flex-basis: 28%;
-    /* height: 595px; */
-    /* border-radius: 496px; */
     border-radius: 50%;
 }
 
@@ -160,10 +110,7 @@ header {
 .jogar {
     color:white;
     font-weight: 900;
-    /* font-size: xxx-large; */
     font-size: 27px;
-    /* height: 90px; */
-    /* width: 400px; */
     width: 180px;
     display: block;
     margin: 20px auto 0 auto;
@@ -177,17 +124,17 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     font-weight: 900;
-    /* height:218px; */
     padding: 10px;
     border-radius: 20px;
-    /* width:580px; */
     flex-basis: 28%;
-    background-color: white;       
+    background-color: white;    
 }
 
 .aviso h3 {
     margin-bottom: 8px;
+    color: #4BB257;
 }
 
 .aviso p:nth-child(2) {
@@ -195,15 +142,14 @@ header {
 }
 
 footer {
-    /* text-align: center; */
     color: #f7f7f7;
-    margin-top: 50px;
     font-size: 16px;
     position: relative;
+    margin: 16%;
 }
 
 footer span {
-    position: absolute;
+    position: relative;
     top: -10px;
     left: 50%;
     transform: translateX(-30%);
