--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -64,10 +64,21 @@ header{
     margin: 40px;
 }
 .nome {
-    color:#000;
+    color:#fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
     margin: 0 120% 210px;
+    font: 700;
+}
+
+.conquistas {
+    width: 482px;
+    height: 366px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: #FFF;
+    backdrop-filter: blur(20px);
+    margin: 400px 15% 5rem -46rem;
 }
