--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -82,3 +82,11 @@ header{
     backdrop-filter: blur(20px);
     margin: 400px 15% 5rem -46rem;
 }
+
+.conquistas-name {
+    font-weight: 700;
+    font-size: 25px;
+    font-family: Poppins;
+    margin: -3rem 5px 1rem;
+    color: #FFF;
+}
