--- a/styles/perfil-style.css
+++ b/styles/perfil-style.css
@@ -100,6 +100,12 @@ header{
     flex-basis: 33%;
 }
 
+.destaques-categorias {
+    display: grid;
+    
+    
+}
+
 .destaques-categorias .destaques-item {
     width: 100%;
     position: relative;
